--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,10 +1,10 @@
 <h1>Pokedex</h1>
 <section class="card">
   <div class="card__title">
-    <h1>{{ name }}</h1>
+    <h1>{{ pokemon.name }}</h1>
   </div>
   <div class="card__body">
-    <img src="" alt="pokemon">
+    <img [src]="pokemon.sprites.front_default" alt="pokemon">
   </div>
   <div class="card__stats">
     <span class="card__stats__type" *ngFor="let type of attributesTypes">{{ type }}</span>
