:construction: dinamic way to bring a pokemon card

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -16,6 +16,7 @@
 
     h1{
     color: #fff;
+    text-transform: capitalize;
     }
 }
 
@@ -43,5 +44,6 @@
     padding: 6px;
     border-radius: 10px;
     margin-right: 10px;
+    text-transform: capitalize;
   }
 }
