--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -7,6 +7,7 @@
     <img [src]="pokemon.sprites.front_default" alt="pokemon">
   </div>
   <div class="card__stats">
-    <span class="card__stats__type" *ngFor="let type of attributesTypes">{{ type }}</span>
+    <span class="card__stats__type" *ngFor="let t of pokemon.types">
+      {{ t.type.name }}</span>
   </div>
 </section>
