--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -22,10 +22,14 @@
 
 .card__body{
   background-color: #616161;
-  width: 90%;
+  width: 87%;
   margin: 0 1rem 0 1rem;
-  height: 70%;
+  height: 67%;
   border-radius: 5px;
+
+  img {
+    width: 100%;
+  }
 
 }
 
@@ -35,7 +39,7 @@
   justify-content: flex-start;
   align-items: center;
   padding-left: 13px;
-  padding-top: 5px;
+  padding-top: 12px;
 
   span{
     color: #383131;
