:construction: finish config favicon

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -51,7 +51,7 @@
       box-shadow: 0px 6px 0px #6f93fe;
       transition: all 0.1s;
 
-      &:hover {
+      &:active {
         box-shadow: 0px 2px 0px #6f93fe;
         position: relative;
         top: 2px;
