--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,3 +1,9 @@
+main{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .card_search{
   display: flex;
   flex-direction: column;
@@ -115,4 +121,13 @@
     margin-right: 10px;
     text-transform: capitalize;
   }
+}
+
+.container_abilities{
+  border: 1px solid #080505;
+  border-radius: 8px;
+  width: 100%;
+  height: 130px;
+  padding: 20px;
+
 }
