--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -78,12 +78,18 @@
 
 .card__title{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  margin-top: 5px;
+  margin-bottom: 10px;
 
     h1{
     color: #fff;
     text-transform: capitalize;
+    }
+
+    h2{
+      color: #fff;
     }
 }
 
