--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -7,28 +7,24 @@
   </div>
 </section>
 <main>
-  <section class="card">
-    <ul>
+  <section *ngFor="let pokemon of pokemons" class="card">
+    <ul >
       <div class="card__title">
         <h1>{{ pokemon.name }}</h1>
-        <h2>{{ pokemon.id }}</h2>
+        <h2>{{ infoPokemons.id }}</h2>
       </div>
       <div class="card__body">
-        <img [src]="pokemon.sprites.front_default" alt="pokemon">
+        <img [src]="infoPokemons.sprites.front_default" alt="pokemon">
       </div>
       <div class="card__stats">
-        <span class="card__stats__type" *ngFor="let t of pokemon.types">
+        <span class="card__stats__type" *ngFor="let t of infoPokemons.types">
           {{ t.type.name }}</span>
         </div>
       </ul>
     </section>
     </main>
     <section class="pagination">
-<<<<<<< HEAD
   <button  id="loadMore" type="button">
-=======
-  <button id="loadMore" type="button">
->>>>>>> refs/remotes/origin/main
     Load More
   </button>
 </section>
