--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -11,7 +11,7 @@
     <ul >
       <div class="card__title">
         <h1>{{ pokemon.name }}</h1>
-        <h2>{{ infoPokemons.id }}</h2>
+        <h2>{{ pokemon.id }}</h2>
       </div>
       <div class="card__body">
         <img [src]="infoPokemons.sprites.front_default" alt="pokemon">
