--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -7,17 +7,17 @@
   </div>
 </section>
 <main>
-  <section *ngFor="let pokemon of pokemons" class="card">
+  <section *ngFor="let pokemon of pokemon" class="card">
     <ul >
       <div class="card__title">
         <h1>{{ pokemon.name }}</h1>
         <h2>{{ pokemon.id }}</h2>
       </div>
       <div class="card__body">
-        <img [src]="infoPokemons.sprites.front_default" alt="pokemon">
+        <img [src]="pokemon.sprites.front_default" alt="pokemon">
       </div>
       <div class="card__stats">
-        <span class="card__stats__type" *ngFor="let t of infoPokemons.types">
+        <span class="card__stats__type" *ngFor="let t of pokemon.types">
           {{ t.type.name }}</span>
         </div>
       </ul>
