--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -65,6 +65,7 @@
 }
 
 main{
+  padding-top: 1rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   background-image: url('https://criticalhits.com.br/wp-content/uploads/2019/11/pok%C3%A9mon-arena.png');
